<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_routesCustom_Mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_car" />

            <mendroid.easygo.utils.ui.TextViewMedium
                android:id="@+id/txt_routesCustom_FromTo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/strRecent_FromTo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <mendroid.easygo.utils.ui.TextViewRegular
                android:id="@+id/txt_routesCustom_DT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:maxLines="3"
                android:text="@string/strBook_DT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />

            <mendroid.easygo.utils.ui.TextViewRegular
                android:id="@+id/txt_routesCustom_AT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:maxLines="3"
                android:text="@string/strBook_AT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <mendroid.easygo.utils.ui.TextViewRegular
                android:id="@+id/txt_routesCustom_Distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:maxLines="3"
                android:text="@string/strBook_Distance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />

            <mendroid.easygo.utils.ui.TextViewRegular
                android:id="@+id/txt_routesCustom_Hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="right"
                android:maxLines="3"
                android:text="@string/strBook_TT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
