<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include layout="@layout/app_bar_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFrom"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <AutoCompleteTextView
                    android:id="@+id/atFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/strHome_From"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/light_gray" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray"></View>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTo"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <AutoCompleteTextView
                    android:id="@+id/atTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/strHome_To"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/light_gray" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_gray" />


        <TextView
            android:id="@+id/tvSearchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/strHome_Date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/light_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/laySearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_app_theme"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <mendroid.easygo.utils.ui.TextViewMedium
                android:id="@+id/tvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/strHome_Search"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <mendroid.easygo.utils.ui.TextViewMedium
            android:id="@+id/tvNoRecentSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/strHome_NoRecent"
            android:textColor="@color/dark_gray"
            android:textSize="18sp" />

        <mendroid.easygo.utils.ui.jazzyview.JazzyListView
            android:id="@+id/lvRecentSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:divider="@null"
            android:dividerHeight="0dp" />
    </LinearLayout>
</LinearLayout>